# mms-agent-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: linux.yml  macos.yml  main.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: Agent.h  Util.h  mmtp.pb.h
lib/src/: Agent.cpp  mmtp.pb.cc
lib/test/: CMakeLists.txt  Tests.cpp
